<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detaildiseaseInfo.DetailDiseaseInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:background="@color/colorWhite">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/btn_back_detailInfo"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_close"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:contentDescription="@string/button_back"
                android:focusable="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_17ssp"
                android:layout_centerHorizontal="true"
                android:text="@string/title_detail"
                android:layout_centerVertical="true"
                android:textStyle="bold"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar">
        <LinearLayout
            android:id="@+id/mainInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_name_disease_info_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp"/>
            <TextView
                android:id="@+id/tv_latin_disease_info_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/_12ssp"
                android:text="@string/latin"
                android:textStyle="italic"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/img_desease_plant"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_of_a_disease_in_the_chili_plant"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainInfo"/>
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tab_layout"/>
    </RelativeLayout>

</RelativeLayout>