<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:clickable="true"
        app:cardCornerRadius="@dimen/_10sdp">

        <ImageView
            android:id="@+id/disease_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_170sdp"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/image_of_a_disease_in_the_chili_plant"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/parentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/disease_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:text="@string/title"/>
            <TextView
                android:id="@+id/disease_latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/colorGreen"
                android:text="@string/latin"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</LinearLayout>